--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@
 
         {% include common/notices.html %}
 
-        <div class="headings animated fadeInLeft">
+        <div class="headings animated fadeInLeft tri">
             {% if site.home.section1 %}{{ site.home.section1 }}{% endif %}
             {% if site.home.section2 %}{{ site.home.section2 }}{% endif %}
             {% if site.home.section3 %}{{ site.home.section3 }}{% endif %}
