--- a/_sass/simple-texture-home.scss
+++ b/_sass/simple-texture-home.scss
@@ -85,8 +85,7 @@ textarea {
   0% {background-image: url(../images/theme/sm4.png);}
   40% {background-image: url(../images/theme/sm-2-scale.png);}
   76% {background-image: url(../images/theme/sm-3-scale.png);}
-  90% {background-image: url(../images/theme/sm-1-scale.png);}
-  100% {background-image: url(../images/theme/sm4.png);}
+  100% {background-image: url(../images/theme/sm-1-scale.png);}
 }
 
 @keyframes triangle2{
@@ -110,7 +109,7 @@ textarea {
     animation-duration: 60s;
     animation-direction: alternate;
     animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    animation-timing-function: ease-out;
     animation-fill-mode: both;
 }
 
